14-Network-Policies/04-network-policy-default-deny-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: default-deny-egress
spec:
    podSelector: {}
    policyTypes:
        - Egress
