14-Network-Policies/05-network-policy-allow-all-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-all-egress
spec:
    podSelector: {}
    egress:
        - {}
    policyTypes:
        - Egress
