14-Network-Policies/07-network-policy-multiport-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: multi-port-egress
    namespace: default
spec:
    podSelector:
        matchLabels:
            role: db
    policyTypes:
        - Egress
    egress:
        - to:
              - ipBlock:
                    cidr: 10.0.0.0/24
          ports:
              - protocol: TCP
                port: 32000
                endPort: 32768
