14-Network-Policies/08-network-policy-multiple-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: egress-namespaces
spec:
    podSelector:
        matchLabels:
            app: myapp
    policyTypes:
        - Egress
    egress:
        - to:
              - namespaceSelector:
                    matchExpressions:
                        - key: namespace
                          operator: In
                          values: ["frontend", "backend"]
